--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ div{
     padding: 20px;
 }
 p{
-    font-size: larger;
+    font-size: xx-large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 button {
